# csv2sqlite3

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  README.md
.github/workflows/: coverage.yml  linux.yml
_packages/: csv2sqlite3-0.1.0-Linux.sh  csv2sqlite3-0.1.0-Linux.tar.Z  csv2sqlite3_0.1.0_i386.deb
cmake/: Packing.cmake
data/: data.csv  generalDB.db  info.txt
docs/: Doxyfile.in
include/: convService.h  databaseService.h
src/: main.cpp
src/convService/: CMakeLists.txt  convService.cpp
src/dbService/: databaseService.cpp
test/: CMakeLists.txt  test_convService.cpp  test_dbService.cpp
